whitespace fix

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -58,14 +58,14 @@
     transition:.5s;
 }
 
-.whole-contact {
+/* .whole-contact {
     position: absolute;
     color: white;
     width: 100%;
     bottom: -4510px;
     background-color: rgba(1,1,1,255);
     height: 310px;
-}
+} */
 
 .explore {
     display: flex;
