--- a/src/Components/Quote.css
+++ b/src/Components/Quote.css
@@ -44,9 +44,9 @@ input, label {
     text-align: center;
 }
 
-.quote-div {
+/* .quote-div {
     position: absolute;
     top: 180px;
     right: 15px;
     color: white;
-}
+} */
